# BuildSmall

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
app/: __init__.py
app/core/: __init__.py  config.py  models.py
app/extractors/: __init__.py  arxiv.py  medium.py  pdf.py  youtube.py
app/services/: chat.py  chunking.py  embeddings.py  ingestion.py  vector_store.py
app/ui/: gradio_app.py  theme.py
app/utils/: source_detection.py  zerogpu.py
