[project]
name = "knowledgehub-ingestor"
version = "1.0.0"
description = "A Gradio document ingestion UI for PDFs, arXiv papers, and Medium articles."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=2.1.3",
    "beautifulsoup4>=4.12.3",
    "datasets>=5.0.0",
    "gradio>=5.0.0",
    "openai>=1.99.0",
    "pydantic-settings>=2.4.0",
    "pypdf>=4.3.1",
    "python-dotenv>=1.0.1",
    "qdrant-client>=1.12.1",
    "requests>=2.32.3",
    "sentence-transformers>=3.0.1",
    "spaces",
    "torchvision>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.3.2",
]

[tool.ruff]
line-length = 100
target-version = "py310"
